added latest portfolio responsive

--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@
                   <h3 class="text-center text-primar lg:text-4xl text-3xl font-bold my-6">Our Works Process</h3>
                    <p class=" w-full lg:w-2/4 mx-auto text-center text-base font-medium text-color-gray">Our work process ensures a structured, step-by-step approach to deliver quality results, from initial planning and design to development, testing, and final delivery.</p>
 
-                   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 grid-rows-7 lg:grid-rows-2 gap-6">
+                   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                     <!-- card-1 -->
                     <div class="card shadow-sm px-4 py-4 rounded-2xl">
                       <img class="w-full lg:w-[250px] h-full lg:h-[250px]" src="assets/img1.png" alt="">
                      </div>
                     <!-- card-2 -->
-                    <div class=" card shadow-xl px-4 py-4 rounded-2xl col-span-2">
-                      <div class="items-center text-left space-y-4 w-full lg:w-[250px] h-full lg:h-[250px]">
+                    <div class=" grid lg:col-span-2 card shadow-xl px-4 py-4 rounded-2xl">
+                      <div class="items-center text-left space-y-4">
                         <h2 class="card-title card-title text-xl font-extrabold text-[#1C1C1C]">Commercial</h2>
                         <p>Our commercial process focuses on building value-driven strategies that maximize profitability, enhance client relationships, and ensure sustainable growth.</p>
                        <div class="flex gap-2">
