--- a/index.html
+++ b/index.html
@@ -161,19 +161,19 @@
           <div class="carousel w-full">
             <!-- slider -1 -->
           <div id="slide1" class="carousel-item relative w-full ">
-            <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+            <div class="flex flex-col lg:flex-row p-8 lg:p-12">
               <!-- text-content -->
-              <div class="space-y-4 flex-1">
-                <h2 class="text-4xl font-bold ">Latest Projects, Before & After Transformations </h2>
+              <div class="space-y-8 flex-1">
+                <h2 class="text-3xl font-bold ">Latest Projects, Before & After Transformations </h2>
                 <p class="w-3/4 text-base font-normal text-opacity-5">Showcase recent designs and successful projects, featuring images and descriptions of each. Display dramatic before-and-after photos of redesigns to demonstrate impact.</p>
                 <button class="btn w-screen  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">See More! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
                   
               </div>
               <!-- img -content -->
-              <div class="flex-1">
+              <div class="flex-1 mt-5">
                 <img
               src="assets/img2.png"
-              class="lg:w-[400px]" />
+              class="w-full lg:w-[400px]" />
               </div>
             </div>
             <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
@@ -183,19 +183,19 @@
           </div>
             <!-- slider -2 -->
           <div id="slide2" class="carousel-item relative w-full ">
-            <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+            <div class="flex flex-col lg:flex-row p-8 lg:p-12">
               <!-- text-content -->
-              <div class="space-y-4 flex-1">
-                <h2 class="text-6xl font-bold">Outdoor Living Spaces</h2>
-                <p class="w-3/4 text-base font-normal text-opacity-5">Outdoor living spaces extend your home’s comfort into nature, offering a perfect setting for relaxation, entertaining, and enjoying the beauty of the outdoors.</p>
-                <button class="btn w-screen  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">See More! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
-                <button class="btn w-screen  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">Order Now! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
+              <div class="space-y-8 flex-1 my-5">
+                <h2 class="text-3xl font-bold ">Outdoor Living Spaces</h2>
+                <p class=" w-full lg:w-3/4 text-base font-normal text-opacity-5">Outdoor living spaces extend your home’s comfort into nature, offering a perfect setting for relaxation, entertaining, and enjoying the beauty of the outdoors.</p>
+                <button class="btn w-full lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">See More! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
+                
               </div>
               <!-- img -content -->
               <div class="flex-1">
                 <img
               src="assets/img3.png"
-              class="lg:w-[400px]" />
+              class="w-full lg:w-[400px]" />
               </div>
             </div>
             <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
@@ -205,19 +205,19 @@
           </div>
             <!-- slider -3 -->
           <div id="slide3" class="carousel-item relative w-full ">
-            <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+            <div class="flex flex-col lg:flex-row p-8 lg:p-12">
               <!-- text-content -->
-              <div class="space-y-4 flex-1">
-                <h2 class="text-6xl font-bold">Modern Home Design</h2>
-                <p class="w-3/4 text-base font-normal text-opacity-5">Modern home design emphasizes clean lines, open spaces, and a seamless blend of functionality and style, creating a home that is both elegant and comfortable</p>
-                <button class="btn w-screen  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">See More! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
-                <button class="btn w-screen  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">Order Now! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
+              <div class="space-y-8 flex-1 my-5">
+                <h2 class="text-3xl font-bold">Modern Home Design</h2>
+                <p class=" w-full lg:w-3/4 text-base font-normal text-opacity-5">Modern home design emphasizes clean lines, open spaces, and a seamless blend of functionality and style, creating a home that is both elegant and comfortable</p>
+                <button class="btn w-full  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">See More! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
+                <button class="btn w-full  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">Order Now! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
               </div>
              <!-- img -content -->
              <div class="flex-1">
               <img
             src="assets/img4.png"
-            class="lg:w-[400px]" />
+            class="w-full lg:w-[400px]" />
             </div>
           </div>
           <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
@@ -227,19 +227,19 @@
         </div>
             <!-- slider -4 -->
           <div id="slide4" class="carousel-item relative w-full ">
-            <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+            <div class="flex flex-col lg:flex-row p-8 lg:p-12">
               <!-- text-content -->
-              <div class="space-y-4 flex-1">
-                <h2 class="text-4xl font-bold">Latest Projects, <br> Before & After Transformations </h2>
-                <p class="w-3/4 text-base font-normal text-opacity-5">Showcase recent designs and successful projects, featuring images and descriptions of each. Display dramatic before-and-after photos of redesigns to demonstrate impact.</p>
-                <button class="btn bg-primary-bg text-white">See More!</button>
-                <button class="btn bg-primary-bg text-white">Order Now!</button>
+              <div class="space-y-8 flex-1 my-5">
+                <h2 class="text-3xl font-bold text-left ">Latest Transformations </h2>
+                <p class=" w-full lg:w-3/4 text-base font-normal text-opacity-5">Showcase recent designs and successful projects, featuring images and descriptions of each. Display dramatic before-and-after photos of redesigns to demonstrate impact.</p>
+                <button class="btn w-full  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">See More! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
+                <button class="btn w-full  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">Order Now! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
               </div>
               <!-- img -content -->
               <div class="flex-1">
                 <img
               src="assets/img5.png"
-              class="lg:w-[400px]" />
+              class="w-full lg:w-[400px]" />
               </div>
             </div>
             <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
