--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="carousel w-full">
             <!-- slider -1 -->
           <div id="slide1" class="carousel-item relative w-full ">
-            <div class="flex flex-col lg:flex-row p-8 lg:p-12">
+            <div class="flex flex-col gap-5 lg:flex-row p-8 lg:p-12">
               <!-- text-content -->
               <div class="space-y-8 flex-1">
                 <h2 class="text-3xl font-bold ">Latest Projects, Before & After Transformations </h2>
