--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <!-- text-content -->
               <div class="space-y-8 flex-1">
                 <h2 class="text-3xl font-bold ">Latest Projects, Before & After Transformations </h2>
-                <p class="w-3/4 text-base font-normal text-opacity-5">Showcase recent designs and successful projects, featuring images and descriptions of each. Display dramatic before-and-after photos of redesigns to demonstrate impact.</p>
+                <p class=" w-full lg:w-3/4 text-base font-normal text-opacity-5">Showcase recent designs and successful projects, featuring images and descriptions of each. Display dramatic before-and-after photos of redesigns to demonstrate impact.</p>
                 <button class="btn w-screen  lg:w-[250px] bg-b-color rounded-full border border-[rgb(171, 239, 95)] font-bold text-xl">See More! <i class="fa-solid fa-arrow-right w-6 h-6  text-[#1C1C1C] bg-primary-bg p-1 text-center -rotate-45 border-0 rounded-full"></i></button>
                   
               </div>
